# loom

./: .clang-format  .clang-tidy  .cursorignore  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  wild-moseying-quasar.md
.cache/clangd/index/: accessor.h.BD9E30CA0B5D43E2.idx  activation_ops.cpp.57C8FC965612F2D1.idx  activation_ops.h.FAD805B88B2BA50A.idx  allocator.h.F290A841551D069D.idx  allocator_registry.cpp.B7D9843A2CDC337F.idx  allocator_registry.h.9B744E9B7AC8DECE.idx  autograd_meta.h.46A2B62A9E18B009.idx  basic_allocator.cpp.3128F1B2BA3F3B36.idx  basic_allocator.cpp.EEBC8CE6931715F4.idx  basic_allocator.h.631CB0100DD09CC6.idx  bench_main.cpp.703598C600344271.idx  binary_ops.cpp.F1C150E58D61588F.idx  binary_ops.h.9E879A0E9F04B012.idx  dataloader.cpp.D74E42967F3EA078.idx  dataloader.h.AEC85D1F92B117D1.idx  dataset.h.012B627F3560C025.idx  device.cpp.1FBFF45829DD5E62.idx  device.h.CEB7001E19C7B612.idx  dtypes.h.EB53F038D6F3538F.idx  engine.cpp.06F36898294D79E8.idx  engine.h.516C21F350E88781.idx  linear.cpp.912CC89F3ED96CDB.idx  linear.h.79A7B2C948B92641.idx  logger.cpp.46ABC541C89F18B3.idx  logger.h.D1A8573F56B39184.idx  loss.cpp.13DA54EC13BEC176.idx  loss.h.A4F7668CA394C68A.idx  loss_ops.cpp.FC1E612C3ED5D303.idx  loss_ops.h.55BA2F703C2E3273.idx  main.cpp.D9B2AF0E1B33C380.idx  matmul_ops.cpp.67AFD80D599FE15F.idx  matmul_ops.h.649F115ED9ACA5E1.idx  mnist_dataset.cpp.23D253A73CBB9E73.idx  mnist_dataset.h.03906411B415CA54.idx  module.cpp.02CA35E4EF4539A4.idx  module.h.5B9612DF458E80A5.idx  no_grad.cpp.3249AC598034688C.idx  no_grad.h.7CB78612A4B4623E.idx  node.cpp.D425F1A88066CB43.idx  node.h.75640A8ABF8CC2DE.idx  (+43 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  basic_allocator.cpp  bench_main.cpp  cpu_allocator.cpp  pooling_allocator.cpp
docker/: Dockerfile.cpu  Dockerfile.gpu.production  README.md
docs/: PHASE4_COMPLETE.md  PHASE4_OPTIMIZER_PLAN.md  TESTING_GAPS_ANALYSIS.md  TRAINING_TUI_DESIGN.md
examples/: CMakeLists.txt
examples/mnist/: CMakeLists.txt  main.cpp
include/common/: dtypes.h  logger.h  type_traits.h
include/common/dataloader/: dataloader.h  dataset.h  mnist_dataset.h  mnist_loader.h
include/common/memory/: utils.h
include/common/registry/: allocator_registry.h
include/common/tensor/: accessor.h  allocator.h  storage.h  tensor.h
include/cpu/: basic_allocator.h  cpu_allocator.h  pooling_allocator.h
include/loom/: device.h  dtypes.h  logger.h  type_traits.h
include/loom/autograd/: autograd_meta.h  engine.h  no_grad.h  node.h
include/loom/autograd/nodes/: activation_ops.h  binary_ops.h  loss_ops.h  matmul_ops.h  reduction_ops.h  view_ops.h
include/loom/dataloader/: dataloader.h  dataset.h  mnist_dataset.h
include/loom/gpu/: kernel.h
include/loom/memory/: allocator.h  basic_allocator.h  pooling_allocator.h  utils.h
include/loom/nn/: activation.h  console_monitor.h  linear.h  loss.h  module.h  parameter.h  sequential.h  trainer.h  training_monitor.h
include/loom/optim/: optimizer.h  sgd.h
include/loom/registry/: allocator_registry.h
include/loom/tensor/: storage.h  tensor.h  tensor_iterator.h
scripts/: visualize_benchmarks.py
src/: main.cpp
src/common/: device.cpp  logger.cpp
src/common/autograd/: engine.cpp  no_grad.cpp  node.cpp
src/common/autograd/nodes/: activation_ops.cpp  binary_ops.cpp  loss_ops.cpp  matmul_ops.cpp  reduction_ops.cpp  view_ops.cpp
src/common/dataloader/: dataloader.cpp  mnist_dataset.cpp  mnist_loader.cpp
src/common/memory/: utils.cpp
src/common/nn/: activation.cpp  console_monitor.cpp  linear.cpp  loss.cpp  module.cpp  parameter.cpp  sequential.cpp  trainer.cpp
src/common/optim/: optimizer.cpp  sgd.cpp
src/common/registry/: allocator_registry.cpp
src/common/tensor/: storage.cpp  tensor.cpp  tensor_iterator.cpp
src/cpu/: basic_allocator.cpp  cpu_allocator.cpp  pooling_allocator.cpp
src/gpu/: kernel.cu
tests/: CMakeLists.txt  test_allocator_registry.cpp  test_autograd.cpp  test_basic_allocator.cpp  test_dataloader.cpp  test_device.cpp  test_dtypes.cpp  test_functional.cpp  test_linear.cpp  test_logger.cpp  test_loss.cpp  test_main.cpp  test_math_ops.cpp  test_mnist_dataset.cpp  test_module.cpp  test_optimizer.cpp  test_parameter.cpp  test_pooling_allocator.cpp  test_sequential.cpp  test_storage.cpp  test_tensor.cpp  test_type_traits.cpp
